#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psana-tools
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-08-27
2015-4-28 David Schneider
- further modified xtc iterator to warn for large xtc extents, JIRA issue PSAS-141	

Tag: V00-08-26
2015-4-28 David Schneider
- modify xtc iterator to print message for unusual events, JIRA issue PSAS-141	

Tag: V00-08-25
2015-4-28 David Schneider
- copy pdsdata xtc iterator into psana_test so that it can be modified

Tag: V00-08-24
2015-4-9 David Schneider
- add diagnostic command pyPsanaMonit and C++ module PsanaModuleGetObjects
	
Tag: V00-08-23
2015-3-16 David Schneider
- update psanaTestLib function copyToMultiTestDir to also create index files

Tag: V00-08-22
2015-3-3 David Schneider
- small data JIRA issue PSAS-85
- add option dump_sml to psana_test.dump which is false by default (means do not
  dump small data types). This means be default we can compare dump of .smd.xtc and .xtc
  and expect same thing, but put on option to see those types.
- fix liveModeTest to ignore warnings in dump. Since psana now understands small data,
  and I created that test data using a beta version of the small data tool, psana 
  complains about finding small data in a .xtc file (but just as warnings).

Tag: V00-08-21
2015-2-24 David Schneider
- fix rel6 build

Tag: V00-08-20
2015-2-24 David Schneider
- add option --sml to xtclinedump to parse smlDataProxy payload

Tag: V00-08-19
2015-2-23 David Schneider
- update to pdsdata 8.2.4 with EvrDataV4 and present function
	
Tag: V00-08-18
2015-2-5 David Schneider
- reenable livemod test
	
Tag: V00-08-17
2015-2-4 David Schneider
- I messed up the tag in the last commit and it is hard to undo that, so